creacion de sandwich + cambios en index

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         </nav>
     </header>
     <main class="main-index">
+        <div class="div-h1">
+            <h1>!Bienvenido a Hoy No Cocino¡</h1>
+        </div>
         <section>
             <div class="card-1">
                 <img src="./assets/img/cb1ae325314f0e0c83e18b37f3b1dc1f.jpg" alt="">
