--- a/pages/sándwiches.html
+++ b/pages/sándwiches.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg">
@@ -36,7 +39,48 @@
             </div>
         </nav>
     </header>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+    <main class="main-sand">
+        <section>
+            <div class="div-1">
+                <img src="../assets/img/b7cb7cb0488597e5ace283a5333edea5.jpg" alt="">
+                <div>
+                    <h1>Sándwich de milanesa de carne</h1>
+                    <p>tomate + lechuga</p>
+                    <h3>1,600$ <br> c/papas 2,000$</h3>
+                </div>
+            </div>
+            <div class="div-2">
+                <img src="../assets/img/d4fe75fd258607defd48f3064ce66b78.jpg" alt="">
+                <div>
+                    <h2>Sándwich de milanesa de carne completo</h1>
+                    <p>lecuha + tomate + jamon + queso + huevo</p>
+                    <h3>1,900$ <br> c/papas $2,300</h3>
+                </div>
+            </div>
+            <div class="div-3">
+                <img src="../assets/img/e358ed9c50860d366a64b498e3c615f9.jpg" alt="">
+                <div>
+                    <h2>Sándwich de milanesa de pollo</h1>
+                    <p>tomate + lechuga</p>
+                    <h3>1,300$ <br> c/papas 1,700$</h3>
+                </div>
+            </div>
+            <div class="div-4">
+                <img src="../assets/img/2d3856e70738dd8b46d204ee59a43536.jpg" alt="">
+                <div>
+                    <h2>Sándwich de milanesa de pollo completo</h1>
+                    <p>lechuga + tomate + jamon + queso + huevo</p>
+                    <h3>1,600$ <br> c/papas 2,000$</h3>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+        integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
