--- a/pages/papas.html
+++ b/pages/papas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Papas fritas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -36,6 +36,34 @@
             </div>
         </nav>
     </header>
+    <main class="main-papas">
+        <section>
+            <div class="div-1">
+                <img src="../assets/img/papas-2.jpg" alt="">
+                <div>
+                    <h1>Papas fritas</h1>
+                    <p>Papa fritas solas</p>
+                    <h3>Porción grande 1,400$ <br> Porción chica 850$</h3>
+                </div>
+            </div>
+            <div class="div-2">
+                <img src="../assets/img/FRITAS-CON-CHEDDAR-Y-PANCETA-2.jpg" alt="">
+                <div>
+                    <h2>Papas con cheddar</h1>
+                    <p>Papas fritas + cheddar</p>
+                    <h3>1.850$ <br> Extras bacon/berdeo/salchicha (opcinal)</h3>
+                </div>
+            </div>
+            <div class="div-3">
+                <img src="../assets/img/revuelto-bacalao-con-patatas.jpg" alt="">
+                <div>
+                    <h2>Papas con huevo</h1>
+                    <p>Papas fritas + huevo</p>
+                    <h3>1,650$</h3>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 </body>
