--- a/pages/sándwiches.html
+++ b/pages/sándwiches.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <title>Sándwiches</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
-
 <body>
     <header>
         <nav class="navbar navbar-expand-lg">
@@ -23,16 +20,16 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-black fs-5" href="./pages/producto.html">Sandwiches</a>
+                            <a class="nav-link text-black fs-5" href="./sándwiches.html">Sandwiches</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-black fs-5" href="./papas.html">Papa Fritas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-black fs-5" href="./pages/colores.html">Tortillas</a>
+                            <a class="nav-link text-black fs-5" href="./tortillas.html">Tortillas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-black fs-5" href="./pages/acerdade.html">Lomitos</a>
+                            <a class="nav-link text-black fs-5" href="./lomito.html">Lomitos</a>
                         </li>
                     </ul>
                 </div>
@@ -52,7 +49,7 @@
             <div class="div-2">
                 <img src="../assets/img/d4fe75fd258607defd48f3064ce66b78.jpg" alt="">
                 <div>
-                    <h2>Sándwich de milanesa de carne completo</h1>
+                    <h2>Sándwich de milanesa de carne completo</h2>
                     <p>lecuha + tomate + jamon + queso + huevo</p>
                     <h3>1,900$ <br> c/papas $2,300</h3>
                 </div>
@@ -75,12 +72,7 @@
             </div>
         </section>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-        integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 </body>
-
 </html>
