full responsive sand.html + modificaciones en sandwich.html

--- a/pages/sándwiches.html
+++ b/pages/sándwiches.html
@@ -50,14 +50,14 @@
                 <img src="../assets/img/d4fe75fd258607defd48f3064ce66b78.jpg" alt="">
                 <div>
                     <h2>Sándwich de milanesa de carne completo</h2>
-                    <p>lecuha + tomate + jamon + queso + huevo</p>
+                    <p>lechuga + tomate + jamon + queso + huevo</p>
                     <h3>1,900$ <br> c/papas $2,300</h3>
                 </div>
             </div>
             <div class="div-3">
                 <img src="../assets/img/e358ed9c50860d366a64b498e3c615f9.jpg" alt="">
                 <div>
-                    <h2>Sándwich de milanesa de pollo</h1>
+                    <h2>Sándwich de milanesa de pollo</h2>
                     <p>tomate + lechuga</p>
                     <h3>1,300$ <br> c/papas 1,700$</h3>
                 </div>
@@ -65,7 +65,7 @@
             <div class="div-4">
                 <img src="../assets/img/2d3856e70738dd8b46d204ee59a43536.jpg" alt="">
                 <div>
-                    <h2>Sándwich de milanesa de pollo completo</h1>
+                    <h2>Sándwich de milanesa de pollo completo</h2>
                     <p>lechuga + tomate + jamon + queso + huevo</p>
                     <h3>1,600$ <br> c/papas 2,000$</h3>
                 </div>
