--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <main class="main-index">
         <div class="div-h1">
-            <h1>!Bienvenido a Hoy No Cocino¡</h1>
+            <h1>!Bienvenidos a Hoy No Cocino¡</h1>
         </div>
         <section>
             <div class="card-1">
