modificaciones en los htmls

--- a/pages/lomito.html
+++ b/pages/lomito.html
@@ -43,7 +43,7 @@
                 <div>
                     <h1>Sándwich de lomito</h1>
                     <p>tomate + lechuga</p>
-                    <h3>2,300$ <br> c/papas 2,500$</h3>
+                    <h3>$2,300 <br> c/papas $2,500</h3>
                 </div>
             </div>
             <div class="div-2">
@@ -51,7 +51,7 @@
                 <div>
                     <h2>Sándwich de lomito completo</h2>
                     <p>lecuha + tomate + jamon + queso + huevo</p>
-                    <h3>2,500$ <br> c/papas 2,700$</h3>
+                    <h3>$2,500 <br> c/papas $2,700</h3>
                 </div>
             </div>
             <div class="div-3">
@@ -59,7 +59,7 @@
                 <div>
                     <h2>Sándwich de pollo grillado</h1>
                     <p>tomate + lechuga</p>
-                    <h3>1,800$ <br> c/papas 2,000$</h3>
+                    <h3>$1,800 <br> c/papas $2,000</h3>
                 </div>
             </div>
             <div class="div-4">
