--- a/pages/papas.html
+++ b/pages/papas.html
@@ -43,7 +43,7 @@
                 <div>
                     <h1>Papas fritas</h1>
                     <p>Papa fritas solas</p>
-                    <h3>Porción grande 1,400$ <br> Porción chica 850$</h3>
+                    <h3>Porción grande $1,400 <br> Porción $chica 850</h3>
                 </div>
             </div>
             <div class="div-2">
@@ -51,7 +51,7 @@
                 <div>
                     <h2>Papas con cheddar</h1>
                     <p>Papas fritas + cheddar</p>
-                    <h3>1.850$ <br> Extras bacon / berdeo / salchicha (opcinal)</h3>
+                    <h3>$1.850 <br> Extras bacon / berdeo / salchicha (opcinal)</h3>
                 </div>
             </div>
             <div class="div-3">
@@ -59,7 +59,7 @@
                 <div>
                     <h2>Papas con huevo</h1>
                     <p>Papas fritas + huevo</p>
-                    <h3>1,650$</h3>
+                    <h3>$1,650</h3>
                 </div>
             </div>
         </section>
