--- a/pages/sándwiches.html
+++ b/pages/sándwiches.html
@@ -51,7 +51,7 @@
                 <div>
                     <h2>Sándwich de milanesa de carne completo</h2>
                     <p>lechuga + tomate + jamon + queso + huevo</p>
-                    <h3>1,900$ <br> c/papas $2,300</h3>
+                    <h3>$1,900 <br> c/papas $2,300</h3>
                 </div>
             </div>
             <div class="div-3">
@@ -59,7 +59,7 @@
                 <div>
                     <h2>Sándwich de milanesa de pollo</h2>
                     <p>tomate + lechuga</p>
-                    <h3>1,300$ <br> c/papas 1,700$</h3>
+                    <h3>$1,300 <br> c/papas $1,700</h3>
                 </div>
             </div>
             <div class="div-4">
@@ -67,7 +67,7 @@
                 <div>
                     <h2>Sándwich de milanesa de pollo completo</h2>
                     <p>lechuga + tomate + jamon + queso + huevo</p>
-                    <h3>1,600$ <br> c/papas 2,000$</h3>
+                    <h3>$1,600 <br> c/papas $2,000</h3>
                 </div>
             </div>
         </section>
