cambiando errores xD

--- a/pages/lomito.html
+++ b/pages/lomito.html
@@ -67,7 +67,7 @@
                 <div>
                     <h2>Sándwich de pollo grillado completo</h1>
                     <p>lechuga + tomate + jamon + queso + huevo</p>
-                    <h3>2,200$ <br> c/papas 2,400$</h3>
+                    <h3>$2,200 <br> c/papas $2,400</h3>
                 </div>
             </div>
         </section>
