--- a/pages/papas.html
+++ b/pages/papas.html
@@ -43,7 +43,7 @@
                 <div>
                     <h1>Papas fritas</h1>
                     <p>Papa fritas solas</p>
-                    <h3>Porción grande $1,400 <br> Porción $chica 850</h3>
+                    <h3>Porción grande $1,400 <br> Porción chica $850</h3>
                 </div>
             </div>
             <div class="div-2">
