--- a/pages/sándwiches.html
+++ b/pages/sándwiches.html
@@ -43,7 +43,7 @@
                 <div>
                     <h1>Sándwich de milanesa de carne</h1>
                     <p>tomate + lechuga</p>
-                    <h3>1,600$ <br> c/papas 2,000$</h3>
+                    <h3>$1,600 <br> c/papas 2,000$</h3>
                 </div>
             </div>
             <div class="div-2">
