--- a/pages/sándwiches.html
+++ b/pages/sándwiches.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sándwiches</title>
+    <meta property="og:title" content=Hoy No Cocino>
+    <meta property="og:site_name" content=Hoy No Cocino>
+    <meta property="og:url" content=https://hoynococino.vercel.app/>
+    <meta property="og:description" content=Comida casera elaborada  con productos frescos de primera calidad.>
+    <meta property="og:type" content="">
+    <meta property="og:image" content=https://i.pinimg.com/564x/89/ad/ea/89adea8bbece8d97bdd482f2a7b903fe.jpg>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
